--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,7 @@
         <item>Thể thao</item>
         <item>Công nghệ</item>
     </string-array>
+    <string name="facebook_app_id">2116263888664163</string>
+    <string name="fb_login_protocol_scheme">fb2116263888664163</string>
 
 </resources>
