--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <!--Tùy chọn-->
     <string name="custom">Tùy chọn</string>
     <string name="saved">Tin đã lưu</string>
-    <string name="your_story">Câu chuyện đời thường</string>
+    <string name="your_story">Câu chuyện</string>
     <string name="try_again">Reconnect</string>
     <string name="auth">Đăng nhập/xuất/đăng ký</string>
 
